31-08-06	Added detection of GD extension for media manager
30-08-06    Fixed whitespace in navigation file that caused header error on rebuild
30-08-06    Only check for multi sessions if option enabled
29-08-06    Fixed bugs in MediaMgr
19-08-06    Improved SQL parser regex to be able to catch tables like event-media

IMPROVEMENTS
11-09-06    Added abilility to set a global Javascript onload expression
            see Admin -> General -> Configuration
10-09-06    Moved tableAlias.ini files into data folder (Steven Stremciuc)
09-09-06    Add abililty to include a debug block in development rebuilds
06-09-06    Added Comment module, can be used with all existing modules
05-09-06    Added getCurrentUrl() to Output object so <a href="{getCurrentUrl()}">foo</a>
            in a template will create a link to the currently requested page
04-09-06    Deprecated DA_Default::moduleIsRegistered() in favour of
            SGL::moduleIsEnabled()
03-09-06    Upgraded PEAR libs including HTML_Ajax, note: you now have to call
            DAOs with their correct case, eg in html href:
            {webRoot}/ajaxServer.php?client=all&amp;stub=MediaDAO
            and in js: var remoteHW = new MediaDAO(hwCallback);


+-----------------------+
| VERSION: 0.6.0        |
+-----------------------+
BUGFIXES
13-08-06    Fixed portuguese translation encoding
05-08-06    Fixed error returned when requesting a non-existent article
            (AJ Tarachanowicz)
30-07-06    Fixed bug where admins details could not be saved (jwang1973)
14-07-06    Email sending returns PEAR errors on fails, this was not checked
            properly
14-07-06    Updates fixed on generated modules
12-06-06    Fixed bug where detect missing perms didn't work on windows installs
            (Marian Seitner)
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
14-08-06    Adding a javascript file to a manager must now be done with the path