@@ -27,6 +27,8 @@ BUGFIXES
 19-08-06    Improved SQL parser regex to be able to catch tables like event-media
 
 IMPROVEMENTS
+11-09-06    Added ability to disable blocks on a per-page basis, simply have the
+            block's init() method return false conditionally
 11-09-06    Added abilility to set a global Javascript onload expression
             see Admin -> General -> Configuration
 10-09-06    Moved tableAlias.ini files into data folder (Steven Stremciuc)
